[gd_scene load_steps=22 format=2]

[ext_resource path="res://Tests/Change Venues/VenueSelector.gd" type="Script" id=1]
[ext_resource path="res://Tests/Repopulating by menu parent/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://Tests/Repopulating by menu parent/MenuTestDraggableObject.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tests/Change Venues/Menu.gd" type="Script" id=4]
[ext_resource path="res://Tests/Change Venues/Venue.tscn" type="PackedScene" id=5]
[ext_resource path="res://Tests/Wedding Patio approximate diagram.jpg" type="Texture" id=6]
[ext_resource path="res://DiwanLevel1Floorplan.jpg" type="Texture" id=7]
[ext_resource path="res://Tests/Leaf Plaza Diagram.jpg" type="Texture" id=8]
[ext_resource path="res://Tests/Change Venues/ChangeLayerTestDraggableObject.tscn" type="PackedScene" id=9]
[ext_resource path="res://Tests/AppTestBackground.png" type="Texture" id=10]
[ext_resource path="res://Tests/PrintIconInverse.png" type="Texture" id=11]
[ext_resource path="res://Tests/PrintIcon.png" type="Texture" id=12]
[ext_resource path="res://DINPro-Bold.otf" type="DynamicFontData" id=13]
[ext_resource path="res://Tests/AppTestHeader.png" type="Texture" id=14]
[ext_resource path="res://DINProBold.tres" type="DynamicFont" id=15]
[ext_resource path="res://Tests/Change Venues/TempQuitButton.tscn" type="PackedScene" id=16]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 13 )

[sub_resource type="Theme" id=4]
default_font = ExtResource( 15 )
Fonts/fonts/large = ExtResource( 15 )
Fonts/fonts/normal = SubResource( 3 )
Label/colors/font_color = Color( 0.0470588, 0.490196, 0.254902, 1 )
Label/fonts/font = ExtResource( 15 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 13 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
Fonts/fonts/large = SubResource( 1 )
Fonts/fonts/normal = SubResource( 1 )

[node name="ChangeVenues" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuCanvasLayer" type="CanvasLayer" parent="."]

[node name="ObjectsMenu" type="TabContainer" parent="MenuCanvasLayer" groups=["ObjectsMenu", "VenueMenu"]]
margin_right = 208.0
margin_bottom = 500.0
rect_min_size = Vector2( 200, 500 )
tab_align = 0
drag_to_rearrange_enabled = true
script = ExtResource( 4 )

[node name="Venues" type="Tabs" parent="MenuCanvasLayer/ObjectsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 200, 0 )
tab_align = 0

[node name="Venue Options" type="VBoxContainer" parent="MenuCanvasLayer/ObjectsMenu/Venues"]
margin_right = 200.0
margin_bottom = 141.0
rect_min_size = Vector2( 200, 0 )

[node name="Venue Options" type="Label" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options"]
margin_right = 200.0
margin_bottom = 14.0
text = "Venue Options"

[node name="PanelContainer" type="PanelContainer" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options"]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 59.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer/VBoxContainer"]
margin_right = 186.0
margin_bottom = 14.0
text = "Venue Selection"

[node name="VenueSelector" type="ItemList" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer/VBoxContainer" groups=["LayoutHandler"]]
margin_top = 18.0
margin_right = 186.0
margin_bottom = 27.0
rect_min_size = Vector2( 180, 0 )
allow_reselect = true
auto_height = true
script = ExtResource( 1 )
zoom_control_path = NodePath("../../../PanelContainer2/VBoxContainer/ZoomSpinBox")
updown_pan_control_path = NodePath("../../../PanelContainer3/VBoxContainer/LRPanSpinBox")
leftright_pan_control_path = NodePath("../../../PanelContainer4/VBoxContainer/UDPanSpinBox")

[node name="HSeparator" type="HSeparator" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options"]
margin_top = 63.0
margin_right = 200.0
margin_bottom = 78.0
theme = ExtResource( 2 )

[node name="LayoutOptions" type="Label" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options"]
margin_top = 82.0
margin_right = 200.0
margin_bottom = 96.0
text = "Layout Options"

[node name="PanelContainer2" type="PanelContainer" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options"]
margin_top = 100.0
margin_right = 200.0
margin_bottom = 156.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 49.0

[node name="Zoom" type="Label" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer2/VBoxContainer"]
margin_right = 186.0
margin_bottom = 14.0
text = "Zoom"

[node name="ZoomSpinBox" type="SpinBox" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer2/VBoxContainer"]
margin_top = 18.0
margin_right = 186.0
margin_bottom = 42.0
min_value = 25.0
max_value = 500.0
step = 25.0
value = 100.0
allow_greater = true
allow_lesser = true
suffix = "%"

[node name="PanelContainer3" type="PanelContainer" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options"]
margin_top = 160.0
margin_right = 200.0
margin_bottom = 216.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer3"]
margin_left = 7.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 49.0

[node name="Pan LR" type="Label" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer3/VBoxContainer"]
margin_right = 186.0
margin_bottom = 14.0
text = "Pan Left/Right"

[node name="LRPanSpinBox" type="SpinBox" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer3/VBoxContainer"]
margin_top = 18.0
margin_right = 186.0
margin_bottom = 42.0
min_value = -100.0
step = 25.0
allow_greater = true
allow_lesser = true
suffix = "%"

[node name="PanelContainer4" type="PanelContainer" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options"]
margin_top = 220.0
margin_right = 200.0
margin_bottom = 276.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer4"]
margin_left = 7.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 49.0

[node name="Pan UD" type="Label" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer4/VBoxContainer"]
margin_right = 186.0
margin_bottom = 14.0
text = "Pan Up/Down"

[node name="UDPanSpinBox" type="SpinBox" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer4/VBoxContainer"]
margin_top = 18.0
margin_right = 186.0
margin_bottom = 42.0
min_value = -100.0
step = 25.0
allow_greater = true
allow_lesser = true
suffix = "%"

[node name="HSeparator2" type="HSeparator" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options"]
margin_top = 280.0
margin_right = 200.0
margin_bottom = 295.0
theme = ExtResource( 2 )

[node name="Label" type="Label" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options"]
margin_top = 299.0
margin_right = 200.0
margin_bottom = 313.0
text = "Resets"

[node name="CenterContainer" type="CenterContainer" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options"]
margin_top = 317.0
margin_right = 200.0
margin_bottom = 337.0

[node name="GridContainer" type="GridContainer" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/CenterContainer"]
margin_left = 1.0
margin_right = 198.0
margin_bottom = 20.0
theme = ExtResource( 2 )
custom_constants/hseparation = 25
columns = 2

[node name="ResetViewButton" type="Button" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/CenterContainer/GridContainer"]
margin_right = 82.0
margin_bottom = 20.0
text = "Reset View"

[node name="ClearLayoutButton" type="Button" parent="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/CenterContainer/GridContainer"]
margin_left = 107.0
margin_right = 197.0
margin_bottom = 20.0
text = "Clear Layout"

[node name="Objects" type="Tabs" parent="MenuCanvasLayer/ObjectsMenu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
tab_align = 0

[node name="GridContainer" type="GridContainer" parent="MenuCanvasLayer/ObjectsMenu/Objects"]
margin_right = 40.0
margin_bottom = 40.0
columns = 3

[node name="PanelContainer" type="PanelContainer" parent="MenuCanvasLayer/ObjectsMenu/Objects/GridContainer"]
margin_right = 54.0
margin_bottom = 54.0

[node name="CenterContainer" type="CenterContainer" parent="MenuCanvasLayer/ObjectsMenu/Objects/GridContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 47.0
margin_bottom = 47.0

[node name="TestDraggableObject2" parent="MenuCanvasLayer/ObjectsMenu/Objects/GridContainer/PanelContainer/CenterContainer" instance=ExtResource( 9 )]

[node name="PanelContainer2" type="PanelContainer" parent="MenuCanvasLayer/ObjectsMenu/Objects/GridContainer"]
margin_left = 58.0
margin_right = 112.0
margin_bottom = 54.0

[node name="CenterContainer" type="CenterContainer" parent="MenuCanvasLayer/ObjectsMenu/Objects/GridContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 47.0
margin_bottom = 47.0

[node name="TestDraggableObject2" parent="MenuCanvasLayer/ObjectsMenu/Objects/GridContainer/PanelContainer2/CenterContainer" instance=ExtResource( 9 )]
color = Color( 0, 0, 0, 1 )

[node name="PanelContainer3" type="PanelContainer" parent="MenuCanvasLayer/ObjectsMenu/Objects/GridContainer"]
margin_left = 116.0
margin_right = 170.0
margin_bottom = 54.0

[node name="CenterContainer" type="CenterContainer" parent="MenuCanvasLayer/ObjectsMenu/Objects/GridContainer/PanelContainer3"]
margin_left = 7.0
margin_top = 7.0
margin_right = 47.0
margin_bottom = 47.0

[node name="TestDraggableObject" parent="MenuCanvasLayer/ObjectsMenu/Objects/GridContainer/PanelContainer3/CenterContainer" instance=ExtResource( 3 )]
margin_top = 10.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 20 )
color = Color( 1, 0, 0, 1 )

[node name="TestDraggableObject2" parent="MenuCanvasLayer/ObjectsMenu/Objects/GridContainer/PanelContainer3/CenterContainer" instance=ExtResource( 9 )]
margin_top = 10.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 20 )
color = Color( 1, 0, 0, 1 )

[node name="SaveLoadMenu" type="PanelContainer" parent="MenuCanvasLayer"]
anchor_right = 1.0
margin_left = 912.0
margin_right = -2.0
margin_bottom = 60.0
grow_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MenuCanvasLayer/SaveLoadMenu"]
margin_left = 7.0
margin_top = 7.0
margin_right = 103.0
margin_bottom = 53.0
alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="MenuCanvasLayer/SaveLoadMenu/HBoxContainer"]
margin_right = 46.0
margin_bottom = 46.0

[node name="PrintButton" type="TextureButton" parent="MenuCanvasLayer/SaveLoadMenu/HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 39.0
margin_bottom = 39.0
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 11 )

[node name="TempQuitButtonPanel" parent="MenuCanvasLayer/SaveLoadMenu/HBoxContainer" instance=ExtResource( 16 )]

[node name="VBoxContainer" type="VBoxContainer" parent="MenuCanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Venue1" parent="." instance=ExtResource( 5 )]
venueImage = ExtResource( 8 )
venueName = "Venue1"

[node name="Venue2" parent="." instance=ExtResource( 5 )]
venueImage = ExtResource( 6 )
referenceRectColour = Color( 0, 0.792157, 0.756863, 1 )
venueName = "Venue2"

[node name="Diwan" parent="." instance=ExtResource( 5 )]
venueImage = ExtResource( 7 )
referenceRectColour = Color( 1, 0, 0, 1 )
venueName = "Diwan"

[node name="TestItemListCanvasLayer" type="CanvasLayer" parent="."]
layer = 5
visible = false

[node name="ColorRect" type="ColorRect" parent="TestItemListCanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TestItemListCanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="TestItemListCanvasLayer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 75.0

[node name="MarginContainer" type="MarginContainer" parent="TestItemListCanvasLayer/VBoxContainer/HBoxContainer"]
margin_right = 116.0
margin_bottom = 75.2
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="TextureRect" type="TextureRect" parent="TestItemListCanvasLayer/VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 108.0
margin_bottom = 67.2
rect_min_size = Vector2( 100, 59.2 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 14 )
expand = true

[node name="MarginContainer2" type="MarginContainer" parent="TestItemListCanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 256.0
margin_bottom = 75.0
custom_constants/margin_top = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="TestItemListCanvasLayer/VBoxContainer/HBoxContainer/MarginContainer2"]
margin_top = 8.0
margin_right = 136.0
margin_bottom = 67.0

[node name="Label" type="Label" parent="TestItemListCanvasLayer/VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
margin_right = 136.0
margin_bottom = 26.0
theme = SubResource( 4 )
custom_colors/font_color = Color( 0.0470588, 0.490196, 0.254902, 1 )
custom_fonts/font = ExtResource( 15 )
text = "TEST HEADING"

[node name="Label2" type="Label" parent="TestItemListCanvasLayer/VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
margin_top = 30.0
margin_right = 136.0
margin_bottom = 51.0
custom_colors/font_color = Color( 0.0470588, 0.490196, 0.254902, 1 )
custom_fonts/font = SubResource( 5 )
text = "Test Subheading"

[node name="ApplicationBackground" type="CanvasLayer" parent="."]
layer = -10

[node name="CenterContainer" type="CenterContainer" parent="ApplicationBackground"]
anchor_right = 2.5
anchor_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.4, 0.4 )

[node name="TextureRect" type="TextureRect" parent="ApplicationBackground/CenterContainer"]
margin_left = 1030.0
margin_top = 602.0
margin_right = 1530.0
margin_bottom = 898.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 10 )
stretch_mode = 1

[node name="Label" type="Label" parent="ApplicationBackground"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -21.0
margin_right = 173.0
theme = SubResource( 2 )
text = "Barcino pre-alpha v0.1 "

[connection signal="item_selected" from="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer/VBoxContainer/VenueSelector" to="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer/VBoxContainer/VenueSelector" method="_on_VenueSelector_item_selected"]
[connection signal="value_changed" from="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer2/VBoxContainer/ZoomSpinBox" to="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer/VBoxContainer/VenueSelector" method="_on_Zoom_value_changed"]
[connection signal="value_changed" from="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer3/VBoxContainer/LRPanSpinBox" to="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer/VBoxContainer/VenueSelector" method="_on_HZTL_pan_value_changed"]
[connection signal="value_changed" from="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer4/VBoxContainer/UDPanSpinBox" to="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer/VBoxContainer/VenueSelector" method="_on_VERT_pan_value_changed"]
[connection signal="pressed" from="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/CenterContainer/GridContainer/ResetViewButton" to="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer/VBoxContainer/VenueSelector" method="_on_reset_view"]
[connection signal="pressed" from="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/CenterContainer/GridContainer/ClearLayoutButton" to="MenuCanvasLayer/ObjectsMenu/Venues/Venue Options/PanelContainer/VBoxContainer/VenueSelector" method="_on_clear_layout"]
[connection signal="pressed" from="MenuCanvasLayer/SaveLoadMenu/HBoxContainer/PanelContainer/PrintButton" to="MenuCanvasLayer/ObjectsMenu" method="startPrintProcess"]
